<resources>
    <string name="app_name">Llama</string>
    <string name="hrChoosePreset">Choose Preset...</string>
    <string name="hrTapRhythm">Tap Rhythm</string>
    <string name="hrTest">Test</string>
    <string name="hrReset">Reset</string>
    <string name="hrVibrateDialogMessage">Choose a preset -OR- Tap a rhythm -OR- Type pattern manually (use presets as an example)</string>
    <string name="hrCalendarEventDialogMessage">"This condition is based on the names of events in your calendars. You can choose either the start of a calendar event or the end of a calendar event.

If part of the event's name matches the text then the condition passes, e.g. if you put 'meeting' in the box, events named 'Work meeting' and 'Boring meetings' will trigger the event."</string>
    <string name="hrNotificationTitle">Llama</string>
    <string name="hrIntroText">"I'm Llama. Your very own Location Aware Mobile Application. I use phone masts to figure out where you are, so I don't eat your battery trying to find a GPS signal. I'll need some training to start with. You'll need to tell me where I am now. Tap the areas tab to begin.

If you find me useful, please donate by pressing Menu, then Donate.

Please send feedback to kebabapps@gmail.com"</string>
    <string name="hr0Minutes">0 minutes</string>
    <string name="hr0Seconds">0 seconds</string>
    <string name="hrSpaceSeconds">" seconds"</string>
    <string name="hrEventHistory">Event History</string>
    <string name="hrChangeMusicVolume">Change music/media volume</string>
    <string name="hrEventNameAndGroup">Event name and group</string>
    <string name="hrEnabled">Enabled</string>
    <string name="hrEventEnabledDescription">"Whether Llama should check this event's conditions and run its actions"</string>
    <string name="hrProfileName">Profile name</string>
    <string name="hrProfileNameDescription">The name used to identify this profile</string>
    <string name="hrNotificationVolume">Notification volume</string>
    <string name="hrRingVibrateSilent">Ring/vibrate/silent mode</string>
    <string name="hrChangeRingVibrateSilent">Change ring/vibrate/silent mode</string>
    <string name="hrChangeRingVibrateSilentDescription">Whether to change the ringer, vibrate or silent mode when this profile is activated</string>
    <string name="hrRingtone">Ringtone</string>
    <string name="hrChangeRingtone">Change ringtone</string>
    <string name="hrChangeRingtoneDescription">Whether to change the ringtone when this profile is activated</string>
    <string name="hrNotificationTone">Notification tone</string>
    <string name="hrChangeNotificationTone">Change default notification tone</string>
    <string name="hrChangeNotificationToneDescription">Whether to change the default notification tone when this profile is activated</string>
    <string name="hrMusicVolume">Music/Media volume</string>
    <string name="hrChangeMusicVolumeDescription">Whether to change the music/media volume when this profile is activated</string>
    <string name="hrAlarmVolume">Alarm volume</string>
    <string name="hrChangeAlarmVolume">Change alarm volume</string>
    <string name="hrChangeAlarmVolumeDescription">Whether to change the alarm volume when this profile is activated</string>
    <string name="hrInCallVolume">In-call volume</string>
    <string name="hrChangeInCallVolume">Change in-call volume</string>
    <string name="hrChangeInCallVolumeDescription">Whether to change the in-call/ear-piece volume when this profile is activated</string>
    <string name="hrSystemSoundsVolume">System sounds volume</string>
    <string name="hrChangeSystemSoundsVolume">Change system sounds volume</string>
    <string name="hrChangeSystemSoundsVolumeDescription">Whether to change the system sounds volume when this profile is activated</string>
    <string name="hrLlamaIcon">Llama icon</string>
    <string name="hrChangeLlamaIcon">Change Llama icon</string>
    <string name="hrChangeLlamaIconDescription">Whether to change the Llama icon when this profile is activated</string>
    <string name="hrLlamaIcons">Llama icons</string>
    <string name="hrSelectALlamaIcon">Select a Llama icon</string>
    <string name="hrRingtoneVolumeDescription">The volume to set the ringtone to</string>
    <string name="hrNotificationToneVolumeDescription">The volume to set notification tones to</string>
    <string name="hrChooseVibrateMode">Choose vibrate mode</string>
    <string name="hrChooseVibrateModeDescription">Ringer/vibrate mode</string>
    <string name="hrSelectARingtone">Select a ringtone</string>
    <string name="hrRingtones">Ringtones</string>
    <string name="hrSelectDefaultNotificationDescription">Select a default notification tone</string>
    <string name="hrNotificationTones">Notification tones</string>
    <string name="hrMusicVolumeDescription">The volume to set music/media to</string>
    <string name="hrAlarmDescription">The volume to set alarm sounds to</string>
    <string name="hrInCallDescription">The volume to set in-call audio to</string>
    <string name="hrSystemSoundDescription">The volume to set system sounds to</string>
    <string name="hrChangeRingtoneVolume">Change ringtone volume</string>
    <string name="hrChangeRingtoneVolumeDescription">Whether to change the ringtone volume when this profile is activated</string>
    <string name="hrChangeNotificationVolume">Change notification volume</string>
    <string name="hrChangeNotificationVolumeDescription">Whether to change the notification volume when this profile is activated</string>
    <string name="hrRingtoneVolume">Ringtone volume</string>
    <string name="hrAddAction">Add Action</string>
    <string name="hrAddCondition">Add Condition</string>
    <string name="hrRemove">Remove</string>
    <string name="hrTestActions">Test Actions</string>
    <string name="hrNoisyContacts">Noisy contacts...</string>
    <string name="hrNoisyContactsDescription">Select contacts who will be allowed override the ringer settings in this profile.</string>
    <string name="hrNoisyContactRingerVolume">Noisy ringer volume</string>
    <string name="hrNoisyContactRingerVolumeDescription">The volume to set the ringer to when one of your Noisy Contacts calls.</string>
    <string name="hrHowDoIChangeOtherStuff">"Where's the other settings?"</string>
    <string name="hrHowDoIChangeOtherStuffDescription">This screen is for sound profiles. If you want to change Bluetooth, WiFi, etc, go back to the Events tab and create events to do your bidding.</string>
    <string name="hrAndFinally">And finally...</string>
    <string name="hrPreset">Preset</string>
    <string name="hrDashDashOrDashDash">-- OR --</string>
    <string name="hrIntentEditPackageName">Package name</string>
    <string name="hrIntentEditClassName">Class name</string>
    <string name="hrIntentEditAction">Action</string>
    <string name="hrIntentEditCategory">Categories (comma/pipe separated)</string>
    <string name="hrIntentEditData">Data</string>
    <string name="hrIntentEditDateType">Data type</string>
    <string name="hrIntentEditExtras">Extras</string>
    <string name="hrIntentEditAddExtra">"Add new 'extra' row"</string>
    <string name="hrIntentEditSendMode">Intent send mode</string>
    <string name="hrAdvancedDotDotDot">Advanced...</string>
    <string name="hrEventAdvancedDescription2">Whether this event is delayed or repeating, requires confirmation and trigger filters</string>
    <string name="hrRepeatEvent">Repeat event</string>
    <string name="hrRepeatEventDescription">"Whether this event's actions keep firing for as long as the conditions hold"</string>
    <string name="hrRepeatEventMinutes">Repeat interval</string>
    <string name="hrRepeatEventMinutesDescription">"The number of minutes between each repetition of this event's actions."</string>
    <string name="hrDelayEvent">Delay event</string>
    <string name="hrDelayEventDescription">"Whether this event's actions are run immediately or are run after waiting a certain number of minutes."</string>
    <string name="hrDelayEventMinutes">Delay minutes</string>
    <string name="hrDelayEventMinutesDescription">The number of minutes that must pass between this event being triggered and the actions being fired.</string>
    <string name="hrDelayEventSeconds">Delay seconds</string>
    <string name="hrDelayEventSecondsDescription">The number of additional seconds that must pass between this event being triggered and the actions being fired (for people with fast reactions or OCD :)</string>
    <string name="hrCancelDelayedEvent">Cancel delayed if false</string>
    <string name="hrCancelDelayedEventDescription">"If checked, a delayed event's actions won't fire if its conditions no longer hold true."</string>
    <string name="hrEventRequireConfirmation">Require confirmation</string>
    <string name="hrEventRequireConfirmationDescription">"Whether this event's actions will only be run after you confirm them via a notification."</string>
    <string name="hrMoreInfoDotDotDot">More info...</string>
    <string name="hrEventRequireConfirmationDialog">Confirmation dialog</string>
    <string name="hrEventRequireConfirmationDialogDescription">Whether to interrupt your current activity to show a dialog, or just place an icon in the notification bar.</string>
    <string name="hrQueueEventMinutes">Queue delay</string>
    <string name="hrQueueEventSeconds">Queue delay seconds</string>
    <string name="hrQueueEventMinutesDescription">The number of minutes after the original event fired that this event must wait before checking its conditions and running its actions.</string>
    <string name="hrQueueEventSecondsDescription">The number of seconds after the original event fired that this event must wait before checking its conditions and running its actions.</string>
    <string name="hrNotificationIconDots">Number of dots</string>
    <string name="hrTheNumberOfDotsToShowOnTheIcon">The number of dots to show in the icon.</string>
    <string name="hrDontChangeDots">"Don't change dots"</string>
    <string name="hrAudioStream2">Choose the volume (audio stream) that the sound will play through, or you can choose to cancel all sounds that Llama is playing:</string>
    <string name="hrAllowRetrigger">Allow retrigger</string>
    <string name="hrAllowRetriggerDescription">"Whether to run this event's actions again if it is already true when another one of its conditions is triggered."</string>
    <string name="hrWhatShouldLlamaSay">What should Llama say:</string>
    <string name="hrAudioStreamSpeakInfo">"Some audio streams (e.g. ringer and notification) are played through both the speaker and headphones. Music/media only plays through the headset if it is connected.

If you play through the ringer/notification stream you may notice your music stops playing. If this happens, enable 'Speak action cleanup hack' in Llama's settings. This only affects some phones and TTS engine combinations. Samsung TTS misbehaves. Bad Samsung!"</string>
    <string name="hrFilterViewSearch">Filter, list style and search</string>
    <string name="hrLlamaTones">LlamaTones</string>
    <string name="hrLlamaTonesDescription">"LlamaTones let you change ringtones of other apps' notifications when you change profile."</string>
    <string name="hrIntentEditSetKeyBlankToDelete2">"Set the 'key' to blank to remove that row. Surround variable names with two hashes to expand them in string extra (e.g. ##variablename##)."</string>
    <string name="hrAddNewEvent">Add new event</string>
    <string name="hrAllowedTriggers">Trigger filtering</string>
    <string name="hrAllowedTriggersDescription">Llama will fire an event when all conditions are met, and one condition has caused it to trigger. This option lets you prevent actions from occurring if a certain type of condition triggers the event. Untick the condition to prevent it from triggering.</string>
</resources>