<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/textView1" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hrVibrateDialogMessage" />
    <LinearLayout android:orientation="horizontal" android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/choosePreset" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hrChoosePreset" android:layout_weight="1.0" />
        <Button android:id="@id/tapRhythm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hrTapRhythm" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/test" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hrTest" android:layout_weight="1.0" />
        <Button android:id="@id/reset" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hrReset" android:layout_weight="1.0" />
    </LinearLayout>
    <EditText android:id="@id/text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="EditText" />
</LinearLayout>