<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <TableLayout android:layout_gravity="center" android:background="#ff6a6a6a" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:layout_weight="0.0">
        <TableRow>
            <Button android:layout_gravity="center_vertical" android:id="@id/addConditionButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hrAddCondition" android:layout_weight="1.0" />
            <Button android:layout_gravity="center_vertical" android:id="@id/addActionButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hrAddAction" android:layout_weight="1.0" />
        </TableRow>
        <TableRow>
            <Button android:layout_gravity="center_vertical" android:id="@id/removeButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hrRemove" android:layout_weight="1.0" />
            <Button android:layout_gravity="center_vertical" android:id="@id/testButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hrTestActions" android:layout_weight="1.0" />
        </TableRow>
    </TableLayout>
</LinearLayout>