<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ExpandableListView android:id="@id/expandylist" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <LinearLayout android:layout_gravity="center" android:id="@id/llama_bottom_buttons_holder" android:background="#ff6a6a6a" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:layout_weight="0.0">
        <include layout="@layout/tab_tips" />
        <ImageButton android:layout_gravity="center_vertical" android:id="@id/addButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:src="@drawable/tb_add" android:layout_weight="0.0" android:contentDescription="@string/hrAddNewEvent" />
        <ImageButton android:layout_gravity="center_vertical" android:id="@id/filterButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:src="@drawable/tb_filter_off" android:layout_weight="0.0" android:contentDescription="@string/hrFilterViewSearch" />
        <ImageButton android:layout_gravity="center_vertical" android:id="@id/historyButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:src="@drawable/tb_history" android:layout_weight="0.0" android:contentDescription="@string/hrEventHistory" />
    </LinearLayout>
</LinearLayout>